<resources>
  <string name="app_name">GitHub Sample App</string>
  <!-- Strings related to login -->
  <string name="action_sign_in">Sign in with GitHub</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="login_failed">"Login failed"</string>
  <string name="content_description_logo">Logo</string>
  <string name="github_sample_application">Github Sample Application</string>
  <string name="hint_search_repository">Search repository</string>
  <string name="no_items_found">No items found</string>
  <string name="error_toast">Network error</string>
    <string name="loading_more_data">Loading more data for you…</string>
  <string name="powered_by_egor_salenko">Powered by Egor Salenko</string>
  <string name="search">Search</string>
  <string name="content_description_user_avatar">User Avatar</string>
    <string name="no_description_available">No description available</string>
    <string name="repositories_label">Repositories:</string>
</resources>
